--- a/src/main/webapp/resources/bootstrap/portfolio_3.html
+++ b/src/main/webapp/resources/bootstrap/portfolio_3.html
@@ -368,6 +368,7 @@
                     </ul>
                     <!--end portfolio_list -->
                 </div>
+             </div>
             <!--end isotope -->
             <div class="col-lg-12 col-md-12 col-sm-12">
                 <ul class="pagination pull-right mrgt-0">
