9/24 게시판 에디터 버그 보수,반응형 구상~ ~반응형 적용(보수 조금필요),mobile device 이동

--- a/src/main/webapp/resources/ppt/jw.html
+++ b/src/main/webapp/resources/ppt/jw.html
@@ -106,7 +106,7 @@
 								<li>기상API</li>
 								<li>도로명주소API</li>
 								<li>유투브API</li>
-								<li>아파치 commond mail API</li>
+								<li>아파치 commons mail API</li>
 							</ul>
 						</div>
 					</section>
