--- a/src/main/webapp/resources/ppt/jw.html
+++ b/src/main/webapp/resources/ppt/jw.html
@@ -771,7 +771,7 @@ RESTController는 데이터(JSON)를 반환한다고 볼수있습니다.
 				<section>
 					<h2>End</h2>
 					<div class="fragment"><br>
-						<a href="http://www.thearc.co.kr">www.thearc.co.kr</a><br><br>
+						<a href="http://www.jeongwon.me/thearc">www.jeongwon.me/thearc</a><br><br>
 						<h4><a href="http://www.github.com/kofelo123">허정원</a></h4>
 					</div>
 				</section>
