--- a/src/main/webapp/resources/ppt/jw.html
+++ b/src/main/webapp/resources/ppt/jw.html
@@ -44,7 +44,7 @@
 				<section>
 					<h1>The Arc</h1><br/>
 					<h3>대구 강정보 디아크</h3><br/>
-					<small><a href="http://thearc.co.kr" target="_blank">www.thearc.co.kr</a><br><br>Create by <a href="http://github.com/kofelo123" target="_blank">허정원</a></small>
+					<small><a href="http://www.jeongwon.me/thearc" target="_blank">www.jeongwon.me/thearc</a><br><br>Create by <a href="http://github.com/kofelo123" target="_blank">허정원</a></small>
 					
 					<aside class="notes">
 						발표시작하겠습니다.
